Fix bug for menu items shifting places
- Not really sure why setting a position here fixes things, but it does

--- a/src/components/video/card/videoCollectionButton/manage-video-collection-button.less
+++ b/src/components/video/card/videoCollectionButton/manage-video-collection-button.less
@@ -36,6 +36,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
     border-right: 0px !important;
+    position: absolute;
 
     .ant-menu-item-selected {
       background-color: inherit !important;
